# mcp-get

./: README.md  pyproject.toml
mcp_hub/: cli.py  models.py
mcp_hub/clients/: __init__.py  base.py
mcp_hub/registry/: __init__.py  builtin.py
mcp_hub/state/: __init__.py
mcp_hub/ui/: __init__.py  panels.py
